Kubernetes Files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watermark-ingres
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10000m"
spec: 
  ingressClassName: nginx
  tls:
  - hosts:
    - alphamatrix.linkpc.net
    secretName: watermark-tls
  rules: 
  - host: alphamatrix.linkpc.net
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: watermark-service
            port:
              number: 8080
